// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`legacyConfig 1`] = `
[
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1200.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1920.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-2048.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-3840.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-96.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1200.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1920.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-2048.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-3840.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-96.WEBP",
]
`;

exports[`legacyConfig 2`] = `
[
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1200.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1920.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-2048.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-3840.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-96.WEBP",
]
`;

exports[`legacyConfig 3`] = `
[
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-10.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1080.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1200.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-128.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-16.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1920.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-2048.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-256.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-32.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-384.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-3840.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-48.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-64.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-640.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-750.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-828.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-96.WEBP",
]
`;

exports[`legacyConfig 4`] = `
[
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1200.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1920.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-2048.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-3840.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-96.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1200.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1920.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-2048.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-3840.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-96.WEBP",
]
`;

exports[`legacyConfig 5`] = `
[
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1200.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1920.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-2048.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-3840.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-96.WEBP",
]
`;

exports[`legacyConfig 6`] = `
[
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-10.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1080.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1200.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-128.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-16.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1920.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-2048.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-256.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-32.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-384.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-3840.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-48.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-64.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-640.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-750.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-828.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-96.WEBP",
]
`;

exports[`legacyConfig 7`] = `
[
  [
    "webp",
    10,
    7,
  ],
  [
    "webp",
    1080,
    720,
  ],
  [
    "webp",
    1200,
    800,
  ],
  [
    "webp",
    128,
    85,
  ],
  [
    "webp",
    16,
    11,
  ],
  [
    "webp",
    1920,
    1280,
  ],
  [
    "webp",
    2048,
    1365,
  ],
  [
    "webp",
    256,
    171,
  ],
  [
    "webp",
    32,
    21,
  ],
  [
    "webp",
    384,
    256,
  ],
  [
    "webp",
    3840,
    2560,
  ],
  [
    "webp",
    48,
    32,
  ],
  [
    "webp",
    64,
    43,
  ],
  [
    "webp",
    640,
    427,
  ],
  [
    "webp",
    750,
    500,
  ],
  [
    "webp",
    828,
    552,
  ],
  [
    "webp",
    96,
    64,
  ],
  [
    "webp",
    10,
    7,
  ],
  [
    "webp",
    900,
    600,
  ],
  [
    "webp",
    900,
    600,
  ],
  [
    "webp",
    128,
    85,
  ],
  [
    "webp",
    16,
    11,
  ],
  [
    "webp",
    900,
    600,
  ],
  [
    "webp",
    900,
    600,
  ],
  [
    "webp",
    256,
    171,
  ],
  [
    "webp",
    32,
    21,
  ],
  [
    "webp",
    384,
    256,
  ],
  [
    "webp",
    900,
    600,
  ],
  [
    "webp",
    48,
    32,
  ],
  [
    "webp",
    64,
    43,
  ],
  [
    "webp",
    640,
    427,
  ],
  [
    "webp",
    750,
    500,
  ],
  [
    "webp",
    828,
    552,
  ],
  [
    "webp",
    96,
    64,
  ],
]
`;

exports[`legacyConfig 8`] = `
[
  [
    "webp",
    10,
    15,
  ],
  [
    "webp",
    1080,
    1620,
  ],
  [
    "webp",
    1200,
    1800,
  ],
  [
    "webp",
    128,
    192,
  ],
  [
    "webp",
    16,
    24,
  ],
  [
    "webp",
    1920,
    2880,
  ],
  [
    "webp",
    2048,
    3072,
  ],
  [
    "webp",
    256,
    384,
  ],
  [
    "webp",
    32,
    48,
  ],
  [
    "webp",
    384,
    576,
  ],
  [
    "webp",
    3840,
    5760,
  ],
  [
    "webp",
    48,
    72,
  ],
  [
    "webp",
    64,
    96,
  ],
  [
    "webp",
    640,
    960,
  ],
  [
    "webp",
    750,
    1125,
  ],
  [
    "webp",
    828,
    1242,
  ],
  [
    "webp",
    96,
    144,
  ],
]
`;

exports[`legacyConfig 9`] = `
[
  [
    "webp",
    10,
    7,
  ],
  [
    "webp",
    1080,
    720,
  ],
  [
    "webp",
    1200,
    800,
  ],
  [
    "webp",
    128,
    85,
  ],
  [
    "webp",
    16,
    11,
  ],
  [
    "webp",
    1920,
    1280,
  ],
  [
    "webp",
    2048,
    1365,
  ],
  [
    "webp",
    256,
    171,
  ],
  [
    "webp",
    32,
    21,
  ],
  [
    "webp",
    384,
    256,
  ],
  [
    "webp",
    3840,
    2560,
  ],
  [
    "webp",
    48,
    32,
  ],
  [
    "webp",
    64,
    43,
  ],
  [
    "webp",
    640,
    427,
  ],
  [
    "webp",
    750,
    500,
  ],
  [
    "webp",
    828,
    552,
  ],
  [
    "webp",
    96,
    64,
  ],
]
`;

exports[`newConfig 1`] = `
[
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1200.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1920.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-2048.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-3840.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-96.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1200.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1920.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-2048.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-3840.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-96.WEBP",
]
`;

exports[`newConfig 2`] = `
[
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1200.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1920.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-2048.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-3840.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-96.WEBP",
]
`;

exports[`newConfig 3`] = `
[
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-10.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1080.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1200.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-128.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-16.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1920.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-2048.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-256.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-32.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-384.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-3840.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-48.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-64.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-640.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-750.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-828.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-96.WEBP",
]
`;

exports[`newConfig 4`] = `
[
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1200.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1920.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-2048.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-3840.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-96.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1200.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1920.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-2048.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-3840.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-96.WEBP",
]
`;

exports[`newConfig 5`] = `
[
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1200.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1920.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-2048.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-3840.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-96.WEBP",
]
`;

exports[`newConfig 6`] = `
[
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-10.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1080.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1200.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-128.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-16.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1920.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-2048.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-256.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-32.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-384.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-3840.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-48.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-64.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-640.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-750.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-828.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-96.WEBP",
]
`;

exports[`newConfig 7`] = `
[
  [
    "webp",
    10,
    7,
  ],
  [
    "webp",
    1080,
    720,
  ],
  [
    "webp",
    1200,
    800,
  ],
  [
    "webp",
    128,
    85,
  ],
  [
    "webp",
    16,
    11,
  ],
  [
    "webp",
    1920,
    1280,
  ],
  [
    "webp",
    2048,
    1365,
  ],
  [
    "webp",
    256,
    171,
  ],
  [
    "webp",
    32,
    21,
  ],
  [
    "webp",
    384,
    256,
  ],
  [
    "webp",
    3840,
    2560,
  ],
  [
    "webp",
    48,
    32,
  ],
  [
    "webp",
    64,
    43,
  ],
  [
    "webp",
    640,
    427,
  ],
  [
    "webp",
    750,
    500,
  ],
  [
    "webp",
    828,
    552,
  ],
  [
    "webp",
    96,
    64,
  ],
  [
    "webp",
    10,
    7,
  ],
  [
    "webp",
    900,
    600,
  ],
  [
    "webp",
    900,
    600,
  ],
  [
    "webp",
    128,
    85,
  ],
  [
    "webp",
    16,
    11,
  ],
  [
    "webp",
    900,
    600,
  ],
  [
    "webp",
    900,
    600,
  ],
  [
    "webp",
    256,
    171,
  ],
  [
    "webp",
    32,
    21,
  ],
  [
    "webp",
    384,
    256,
  ],
  [
    "webp",
    900,
    600,
  ],
  [
    "webp",
    48,
    32,
  ],
  [
    "webp",
    64,
    43,
  ],
  [
    "webp",
    640,
    427,
  ],
  [
    "webp",
    750,
    500,
  ],
  [
    "webp",
    828,
    552,
  ],
  [
    "webp",
    96,
    64,
  ],
]
`;

exports[`newConfig 8`] = `
[
  [
    "webp",
    10,
    15,
  ],
  [
    "webp",
    1080,
    1620,
  ],
  [
    "webp",
    1200,
    1800,
  ],
  [
    "webp",
    128,
    192,
  ],
  [
    "webp",
    16,
    24,
  ],
  [
    "webp",
    1920,
    2880,
  ],
  [
    "webp",
    2048,
    3072,
  ],
  [
    "webp",
    256,
    384,
  ],
  [
    "webp",
    32,
    48,
  ],
  [
    "webp",
    384,
    576,
  ],
  [
    "webp",
    3840,
    5760,
  ],
  [
    "webp",
    48,
    72,
  ],
  [
    "webp",
    64,
    96,
  ],
  [
    "webp",
    640,
    960,
  ],
  [
    "webp",
    750,
    1125,
  ],
  [
    "webp",
    828,
    1242,
  ],
  [
    "webp",
    96,
    144,
  ],
]
`;

exports[`newConfig 9`] = `
[
  [
    "webp",
    10,
    7,
  ],
  [
    "webp",
    1080,
    720,
  ],
  [
    "webp",
    1200,
    800,
  ],
  [
    "webp",
    128,
    85,
  ],
  [
    "webp",
    16,
    11,
  ],
  [
    "webp",
    1920,
    1280,
  ],
  [
    "webp",
    2048,
    1365,
  ],
  [
    "webp",
    256,
    171,
  ],
  [
    "webp",
    32,
    21,
  ],
  [
    "webp",
    384,
    256,
  ],
  [
    "webp",
    3840,
    2560,
  ],
  [
    "webp",
    48,
    32,
  ],
  [
    "webp",
    64,
    43,
  ],
  [
    "webp",
    640,
    427,
  ],
  [
    "webp",
    750,
    500,
  ],
  [
    "webp",
    828,
    552,
  ],
  [
    "webp",
    96,
    64,
  ],
]
`;

exports[`newConfigJpeg 1`] = `
[
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-10.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1080.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1200.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-128.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-16.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1920.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-2048.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-256.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-32.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-384.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-3840.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-48.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-64.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-640.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-750.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-828.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-96.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-10.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1080.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1200.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-128.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-16.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1920.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-2048.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-256.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-32.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-384.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-3840.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-48.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-64.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-640.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-750.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-828.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-96.JPG",
]
`;

exports[`newConfigJpeg 2`] = `
[
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-10.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1080.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1200.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-128.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-16.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1920.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-2048.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-256.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-32.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-384.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-3840.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-48.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-64.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-640.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-750.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-828.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-96.JPG",
]
`;

exports[`newConfigJpeg 3`] = `
[
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-10.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1080.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1200.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-128.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-16.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1920.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-2048.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-256.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-32.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-384.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-3840.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-48.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-64.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-640.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-750.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-828.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-96.JPG",
]
`;

exports[`newConfigJpeg 4`] = `
[
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-10.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1080.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1200.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-128.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-16.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1920.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-2048.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-256.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-32.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-384.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-3840.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-48.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-64.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-640.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-750.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-828.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-96.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-10.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1080.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1200.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-128.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-16.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1920.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-2048.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-256.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-32.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-384.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-3840.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-48.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-64.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-640.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-750.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-828.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-96.JPG",
]
`;

exports[`newConfigJpeg 5`] = `
[
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-10.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1080.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1200.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-128.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-16.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1920.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-2048.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-256.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-32.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-384.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-3840.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-48.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-64.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-640.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-750.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-828.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-96.JPG",
]
`;

exports[`newConfigJpeg 6`] = `
[
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-10.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1080.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1200.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-128.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-16.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1920.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-2048.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-256.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-32.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-384.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-3840.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-48.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-64.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-640.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-750.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-828.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-96.JPG",
]
`;

exports[`newConfigJpeg 7`] = `
[
  [
    "jpeg",
    10,
    7,
  ],
  [
    "jpeg",
    1080,
    720,
  ],
  [
    "jpeg",
    1200,
    800,
  ],
  [
    "jpeg",
    128,
    85,
  ],
  [
    "jpeg",
    16,
    11,
  ],
  [
    "jpeg",
    1920,
    1280,
  ],
  [
    "jpeg",
    2048,
    1365,
  ],
  [
    "jpeg",
    256,
    171,
  ],
  [
    "jpeg",
    32,
    21,
  ],
  [
    "jpeg",
    384,
    256,
  ],
  [
    "jpeg",
    3840,
    2560,
  ],
  [
    "jpeg",
    48,
    32,
  ],
  [
    "jpeg",
    64,
    43,
  ],
  [
    "jpeg",
    640,
    427,
  ],
  [
    "jpeg",
    750,
    500,
  ],
  [
    "jpeg",
    828,
    552,
  ],
  [
    "jpeg",
    96,
    64,
  ],
  [
    "jpeg",
    10,
    7,
  ],
  [
    "jpeg",
    900,
    600,
  ],
  [
    "jpeg",
    900,
    600,
  ],
  [
    "jpeg",
    128,
    85,
  ],
  [
    "jpeg",
    16,
    11,
  ],
  [
    "jpeg",
    900,
    600,
  ],
  [
    "jpeg",
    900,
    600,
  ],
  [
    "jpeg",
    256,
    171,
  ],
  [
    "jpeg",
    32,
    21,
  ],
  [
    "jpeg",
    384,
    256,
  ],
  [
    "jpeg",
    900,
    600,
  ],
  [
    "jpeg",
    48,
    32,
  ],
  [
    "jpeg",
    64,
    43,
  ],
  [
    "jpeg",
    640,
    427,
  ],
  [
    "jpeg",
    750,
    500,
  ],
  [
    "jpeg",
    828,
    552,
  ],
  [
    "jpeg",
    96,
    64,
  ],
]
`;

exports[`newConfigJpeg 8`] = `
[
  [
    "jpeg",
    10,
    15,
  ],
  [
    "jpeg",
    1080,
    1620,
  ],
  [
    "jpeg",
    1200,
    1800,
  ],
  [
    "jpeg",
    128,
    192,
  ],
  [
    "jpeg",
    16,
    24,
  ],
  [
    "jpeg",
    1920,
    2880,
  ],
  [
    "jpeg",
    2048,
    3072,
  ],
  [
    "jpeg",
    256,
    384,
  ],
  [
    "jpeg",
    32,
    48,
  ],
  [
    "jpeg",
    384,
    576,
  ],
  [
    "jpeg",
    3840,
    5760,
  ],
  [
    "jpeg",
    48,
    72,
  ],
  [
    "jpeg",
    64,
    96,
  ],
  [
    "jpeg",
    640,
    960,
  ],
  [
    "jpeg",
    750,
    1125,
  ],
  [
    "jpeg",
    828,
    1242,
  ],
  [
    "jpeg",
    96,
    144,
  ],
]
`;

exports[`newConfigJpeg 9`] = `
[
  [
    "jpeg",
    10,
    7,
  ],
  [
    "jpeg",
    1080,
    720,
  ],
  [
    "jpeg",
    1200,
    800,
  ],
  [
    "jpeg",
    128,
    85,
  ],
  [
    "jpeg",
    16,
    11,
  ],
  [
    "jpeg",
    1920,
    1280,
  ],
  [
    "jpeg",
    2048,
    1365,
  ],
  [
    "jpeg",
    256,
    171,
  ],
  [
    "jpeg",
    32,
    21,
  ],
  [
    "jpeg",
    384,
    256,
  ],
  [
    "jpeg",
    3840,
    2560,
  ],
  [
    "jpeg",
    48,
    32,
  ],
  [
    "jpeg",
    64,
    43,
  ],
  [
    "jpeg",
    640,
    427,
  ],
  [
    "jpeg",
    750,
    500,
  ],
  [
    "jpeg",
    828,
    552,
  ],
  [
    "jpeg",
    96,
    64,
  ],
]
`;

exports[`newConfigWithStrings 1`] = `
[
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1200.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1920.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-2048.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-3840.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-96.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1200.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1920.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-2048.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-3840.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-96.WEBP",
]
`;

exports[`newConfigWithStrings 2`] = `
[
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1200.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1920.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-2048.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-3840.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-96.WEBP",
]
`;

exports[`newConfigWithStrings 3`] = `
[
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-10.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1080.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1200.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-128.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-16.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1920.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-2048.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-256.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-32.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-384.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-3840.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-48.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-64.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-640.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-750.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-828.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-96.WEBP",
]
`;

exports[`newConfigWithStrings 4`] = `
[
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1200.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1920.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-2048.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-3840.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-96.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1200.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-1920.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-2048.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-3840.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_small-opt-96.WEBP",
]
`;

exports[`newConfigWithStrings 5`] = `
[
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1200.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-1920.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-2048.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-3840.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash_static.921260e0-opt-96.WEBP",
]
`;

exports[`newConfigWithStrings 6`] = `
[
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-10.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1080.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1200.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-128.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-16.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1920.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-2048.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-256.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-32.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-384.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-3840.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-48.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-64.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-640.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-750.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-828.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-96.WEBP",
]
`;

exports[`newConfigWithStrings 7`] = `
[
  [
    "webp",
    10,
    7,
  ],
  [
    "webp",
    1080,
    720,
  ],
  [
    "webp",
    1200,
    800,
  ],
  [
    "webp",
    128,
    85,
  ],
  [
    "webp",
    16,
    11,
  ],
  [
    "webp",
    1920,
    1280,
  ],
  [
    "webp",
    2048,
    1365,
  ],
  [
    "webp",
    256,
    171,
  ],
  [
    "webp",
    32,
    21,
  ],
  [
    "webp",
    384,
    256,
  ],
  [
    "webp",
    3840,
    2560,
  ],
  [
    "webp",
    48,
    32,
  ],
  [
    "webp",
    64,
    43,
  ],
  [
    "webp",
    640,
    427,
  ],
  [
    "webp",
    750,
    500,
  ],
  [
    "webp",
    828,
    552,
  ],
  [
    "webp",
    96,
    64,
  ],
  [
    "webp",
    10,
    7,
  ],
  [
    "webp",
    900,
    600,
  ],
  [
    "webp",
    900,
    600,
  ],
  [
    "webp",
    128,
    85,
  ],
  [
    "webp",
    16,
    11,
  ],
  [
    "webp",
    900,
    600,
  ],
  [
    "webp",
    900,
    600,
  ],
  [
    "webp",
    256,
    171,
  ],
  [
    "webp",
    32,
    21,
  ],
  [
    "webp",
    384,
    256,
  ],
  [
    "webp",
    900,
    600,
  ],
  [
    "webp",
    48,
    32,
  ],
  [
    "webp",
    64,
    43,
  ],
  [
    "webp",
    640,
    427,
  ],
  [
    "webp",
    750,
    500,
  ],
  [
    "webp",
    828,
    552,
  ],
  [
    "webp",
    96,
    64,
  ],
]
`;

exports[`newConfigWithStrings 8`] = `
[
  [
    "webp",
    10,
    15,
  ],
  [
    "webp",
    1080,
    1620,
  ],
  [
    "webp",
    1200,
    1800,
  ],
  [
    "webp",
    128,
    192,
  ],
  [
    "webp",
    16,
    24,
  ],
  [
    "webp",
    1920,
    2880,
  ],
  [
    "webp",
    2048,
    3072,
  ],
  [
    "webp",
    256,
    384,
  ],
  [
    "webp",
    32,
    48,
  ],
  [
    "webp",
    384,
    576,
  ],
  [
    "webp",
    3840,
    5760,
  ],
  [
    "webp",
    48,
    72,
  ],
  [
    "webp",
    64,
    96,
  ],
  [
    "webp",
    640,
    960,
  ],
  [
    "webp",
    750,
    1125,
  ],
  [
    "webp",
    828,
    1242,
  ],
  [
    "webp",
    96,
    144,
  ],
]
`;

exports[`newConfigWithStrings 9`] = `
[
  [
    "webp",
    10,
    7,
  ],
  [
    "webp",
    1080,
    720,
  ],
  [
    "webp",
    1200,
    800,
  ],
  [
    "webp",
    128,
    85,
  ],
  [
    "webp",
    16,
    11,
  ],
  [
    "webp",
    1920,
    1280,
  ],
  [
    "webp",
    2048,
    1365,
  ],
  [
    "webp",
    256,
    171,
  ],
  [
    "webp",
    32,
    21,
  ],
  [
    "webp",
    384,
    256,
  ],
  [
    "webp",
    3840,
    2560,
  ],
  [
    "webp",
    48,
    32,
  ],
  [
    "webp",
    64,
    43,
  ],
  [
    "webp",
    640,
    427,
  ],
  [
    "webp",
    750,
    500,
  ],
  [
    "webp",
    828,
    552,
  ],
  [
    "webp",
    96,
    64,
  ],
]
`;
